hphp/hack/test/typecheck/instanceof/instanceof_self_outside.php.exp
File "instanceof_self_outside.php", line 4, characters 13-16:
Encountered unexpected text `self`, was expecting a type hint. (Parsing[1002])
File "instanceof_self_outside.php", line 4, characters 17-17:
A scope resolution operator `::` is expected here. (Parsing[1002])
